--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.4.0",
     "classnames": "2.3.1",
+    "contentful": "^10.1.2",
     "date-fns": "2.28.0",
     "next": "latest",
     "react": "^18.2.0",
